Add audio element

--- a/src/template.html
+++ b/src/template.html
@@ -16,5 +16,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="audio-container">
+      <audio id="audio"></audio>
+    </div>
   </body>
 </html>
