--- a/src/template.html
+++ b/src/template.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <link rel="icon" type="image/x-icon" href="/src/assets/favicon.ico">
     <title>Apo Alarm Clock</title>
   </head>
   <body>
