Add privacy policy html page

--- a/src/template.html
+++ b/src/template.html
@@ -16,6 +16,7 @@
     <title>Apo Alarm Clock</title>
   </head>
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div id="audio-container">
       <audio id="audio"></audio>
