--- a/src/privacy_policy.html
+++ b/src/privacy_policy.html
@@ -69,7 +69,7 @@
     </div>
     <div class="text">
       <p>
-        <h1>Privacy Policy</h1><br />
+        <h1>Privacy Policy - Apo Clock Alarm</h1><br />
         At Apo Clock Alarm, accessible from apoclockalarm.com, one of our main
         priorities is the privacy of our visitors. This Privacy Policy document
         contains types of information that is collected and recorded by Apo
