#10 Update privacy policy page design

--- a/src/privacy_policy.html
+++ b/src/privacy_policy.html
@@ -41,24 +41,41 @@
       }
 
       .title {
-        margin-top: 1%;
-        margin-right: 2.5%;
-        margin-left: 2.5%;
-        font-weight: 500;
-        font-size: 1.5rem;
+        color: rgb(158, 187, 216);
+        font-weight: 900;
+        font-size: 64px;
+        user-select: none;
+        margin-top: 50px;
+        align-content: flex-end;
+        font-family: "Roboto","Helvetica","Arial",sans-serif;
+        line-height: 1.334;
+        letter-spacing: 0em;
+        display: block;
       }
 
       .subtitle {
-        font-weight: 400;
-        font-size: 1rem;
+        color: rgb(250, 175, 180);
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 1;
+        user-select: none;
+        margin: 0;
+        font-family: "Roboto","Helvetica","Arial",sans-serif;
+        letter-spacing: 0.00938em;
+        display: block;
       }
 
       .text {
-        margin: 5% auto;
-        border: 3px solid #1976d2;
-        border-radius: 10px;
-        width: 75%;
-        padding: 2%;
+        right: 0;
+        opacity: 0.6;
+        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+        border-radius: "15px";
+        display: "flex";
+        justify-content: "center";
+        width: "50%";
+        height: "15%";
+        padding: 5% 5%;
+        margin: 5% 10%;
       }
     </style>
   </head>
