--- a/src/template.html
+++ b/src/template.html
@@ -12,7 +12,12 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <link rel="icon" type="image/x-icon" href="/src/assets/favicon.ico">
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9617729688463037"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="icon" type="image/x-icon" href="/src/assets/favicon.ico" />
     <title>Apo Alarm Clock</title>
   </head>
   <body>
