--- a/src/privacy_policy.html
+++ b/src/privacy_policy.html
@@ -24,6 +24,7 @@
         padding: 0;
 
         user-select: none;
+        word-wrap: break-word
       }
 
       p {
@@ -78,6 +79,13 @@
         height: "15%";
         padding: 5% 5%;
         margin: 5% 10%;
+      }
+
+      @media screen and (min-width: 150px) and (max-width: 960px) {
+        .title {
+          font-size: 32px;
+          margin-top: 5%;
+        }
       }
     </style>
   </head>
