Add monetag meta tag

--- a/src/template.html
+++ b/src/template.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <link rel="icon" type="image/x-icon" href="/src/assets/favicon.ico" />
+    <meta name="monetag" content="8bad52f144114b3ec7d733db58ea1fe5" />
     <title>Apo Alarm Clock</title>
   </head>
   <body>
