--- a/src/template.html
+++ b/src/template.html
@@ -15,14 +15,12 @@
     <link rel="icon" type="image/x-icon" href="/src/assets/favicon.ico" />
     <meta name="monetag" content="8bad52f144114b3ec7d733db58ea1fe5" />
     <script>
-      (function (s, u, z, p) {
-        (s.src = u), s.setAttribute("data-zone", z), p.appendChild(s);
-      })(
-        document.createElement("script"),
-        "https://inklinkor.com/tag.min.js",
-        5593487,
-        document.body || document.documentElement
-      );
+      (function (d, z, s) {
+        s.src = "https://" + d + "/400/" + z;
+        try {
+          (document.body || document.documentElement).appendChild(s);
+        } catch (e) {}
+      })("osspalkiaom.com", 5593509, document.createElement("script"));
     </script>
     <title>Apo Alarm Clock</title>
   </head>
