Add google analytics script

--- a/src/template.html
+++ b/src/template.html
@@ -22,6 +22,20 @@
         } catch (e) {}
       })("osspalkiaom.com", 5593509, document.createElement("script"));
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-3KY1HPZ5P0"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-3KY1HPZ5P0");
+    </script>
     <title>Apo Alarm Clock</title>
   </head>
   <body>
